# JV8

./: CMakeLists.txt  README.md
res/shaders/: basic.shader
src/: IndexBuffer.cpp  Renderer.cpp  Renderer.hpp  Texture.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  main.cpp
src/core/: IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexBufferLayout.hpp
src/debug/: callback.cpp  callback.hpp
src/graphics/: Camera.cpp  Camera.hpp
src/input/: KeyHelper.cpp  KeyHelper.hpp
src/tests/: Test.cpp  Test.h  Test.hpp  Test3D.cpp  Test3D.hpp  TestClearColor.cpp  TestClearColor.h  TestClearColor.hpp  TestTexture2D.cpp  TestTexture2D.hpp
